Quorum3/Library/Tests/Expressions/Pass/AddDoubleText.quorum
class Main
    action Main
        text a = 3.2 + " is a number."
        output a
        output 3.2 + " is a number."
    end
end