Quorum3/Library/Tests/Expressions/Fail/NotIsObject.quorum
use Libraries.Language.Object
class Main
    action Main
        Object a
        if not a is Object
        end
    end
end